@@ -138,7 +138,7 @@ cp -f /usr/share/mynode/bitcoin.conf /mnt/hdd/mynode/bitcoin/bitcoin.conf
 touch /mnt/hdd/mynode/settings/bitcoin_additional_config
 echo "" >> /mnt/hdd/mynode/bitcoin/bitcoin.conf
 echo "" >> /mnt/hdd/mynode/bitcoin/bitcoin.conf
-echo "### CUSTOM CONFIG ###" >> /mnt/hdd/mynode/bitcoin/bitcoin.conf
+echo "### CUSTOM BTC CONFIG ###" >> /mnt/hdd/mynode/bitcoin/bitcoin.conf
 echo "" >> /mnt/hdd/mynode/bitcoin/bitcoin.conf
 cat /mnt/hdd/mynode/settings/bitcoin_additional_config >> /mnt/hdd/mynode/bitcoin/bitcoin.conf
 
@@ -154,6 +154,13 @@ chown admin:admin /home/admin/.bitcoin/bitcoin.conf
 
 # LND Config
 cp /usr/share/mynode/lnd.conf /mnt/hdd/mynode/lnd/lnd.conf
+touch /mnt/hdd/mynode/settings/lnd_additional_config
+echo "" >> /mnt/hdd/mynode/lnd/lnd.conf
+echo "" >> /mnt/hdd/mynode/lnd/lnd.conf
+echo "### CUSTOM LND CONFIG ###" >> /mnt/hdd/mynode/lnd/lnd.conf
+echo "" >> /mnt/hdd/mynode/lnd/lnd.conf
+cat /mnt/hdd/mynode/settings/lnd_additional_config >> /mnt/hdd/mynode/lnd/lnd.conf
+
 ALIAS=$(cat /mnt/hdd/mynode/settings/.lndalias)
 sed -i "s/alias=.*/alias=$ALIAS/g" /mnt/hdd/mynode/lnd/lnd.conf
 chown bitcoin:bitcoin /mnt/hdd/mynode/lnd/lnd.conf
