@@ -1,6 +1,8 @@
 === v0.1.59 ===
 - Add 443 to Tor
 - Big fix re SSH key and random PW creation
+- SSDs skip QuickSync by default
+- Custom LND Config
 
 === v0.1.58 ===
 - Add improved debug info
